update product page

--- a/public/css/client.css
+++ b/public/css/client.css
@@ -17,6 +17,34 @@
     display: flex;
 }
 
+.swiper-slide-product-active {
+    opacity: 1;
+}
+
+.swiper-slide-product {
+    width: 100%;
+    flex-shrink: 0;
+    opacity: 0;
+    transition: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide-product-detail-active {
+    opacity: 1;
+}
+
+.swiper-slide-product-detail {
+    width: 100%;
+    flex-shrink: 0;
+    opacity: 0;
+    transition: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .swiper-slide {
     width: 100%;
     flex-shrink: 0;
@@ -90,4 +118,20 @@
 
 .text-custom-blue{
     color: #0688B4;
+}
+
+.border-custom-blue{
+    border: 2px solid #0688B4;
+}
+
+
+.swiper-button-pr-prev,
+.swiper-button-pr-next {
+    opacity: 0; 
+    transition: opacity 0.3s;
+}
+
+.swiper-container-product-detail:hover .swiper-button-pr-prev,
+.swiper-container-product-detail:hover .swiper-button-pr-next {
+    opacity: 1; 
 }
