--- a/public/css/client.css
+++ b/public/css/client.css
@@ -135,3 +135,25 @@
 .swiper-container-product-detail:hover .swiper-button-pr-next {
     opacity: 1; 
 }
+
+/* CSS Loading */
+.loader {
+    width: 96px; 
+    height: 96px;
+    border-radius: 50%;
+    border: 8px solid transparent; 
+    border-top-color: #0688B4;
+    border-bottom-color: #0688B4; 
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
