full commit UI admin

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,4 +1,15 @@
 .bg-custom-background {
     background-color: #262A2E;
 }
-  
+
+.text-custom-blue{
+    color: #0688B4;
+}
+
+.bg-custom-background-bl {
+    background-color: #0688B4;
+}
+
+.bg-custom-background-bl-hover {
+    background-color: #046484;
+}
